[build-system]
# requires = ["setuptools", "setuptools-scm"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_forecast"
description = "energy_forecast python package"
readme = "README.md"
requires-python = ">=3.9.13"
# version = "0.1.0"
dynamic = ["version"]
license = {text = "MIT"}
authors = [
    { name = "Azam Din", email = "adin786@gmail.com" }
]
dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools]
packages = ["energy_forecast"]