[build-system]
# requires = ["setuptools", "setuptools-scm"]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_forecast"
description = "energy_forecast python package"
readme = "README.md"
requires-python = ">=3.9.13"
# version = "0.1.0"
dynamic = ["version"]
license = {text = "MIT"}
authors = [
    { name = "Azam Din", email = "adin786@gmail.com" }
]
dependencies = [
    "pandas==1.5.0",
    "sktime==0.14.0",
    "pmdarima==2.0.1",
    "loguru==0.6.0",
]

[project.optional-dependencies]
dev = ["black", "pytest"]
all = [
    "energy_forecast[dev]",
    "pandas==1.5.0",
    "matplotlib==3.5.3",
    "plotly==5.10.0",
    "loguru==0.6.0",
    "boto3==1.24.59",
]


[tool.setuptools.packages.find]
where = ['src']
include = ['energy_forecast*']
namespaces = false

[tool.pytest.ini_options]
testpaths = ["src", "tests"]